--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -19,10 +19,6 @@ test:
 production:
   sessions:
     default:
-      database: locomotive_production
-      # heroku
-      # uri: <%= ENV['MONGOHQ_URL'] %>
-      hosts:
-        - localhost:27017
+      uri: <%= ENV['MONGOHQ_URL'] %>
   options:
     identity_map_enabled: true
